# nix-orb

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md
.circleci/: config.yml  test-deploy.yml
orb-scripts/: Cargo.toml
src/: @orb.yml
src/commands/: install-cachix.yml  install-nix.yml  install.yml  install_cachix.yml  with-cachix.yml  with_cachix.yml
src/examples/: example.yml
src/executors/: default.yml
src/jobs/: run-with-cachix.yml  run-with-nix-cachix.yml
src/scripts/: install-nix.sh  install.js  install.sh  setup.sh  with-cachix.sh
src/tests/: install-nix.bats  install.bats  setup.bats
