[package]
name = "orb-scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "install-nix"
path = "src/bin/install-nix.rs"

[dependencies]
xshell = "0.2.0"
anyhow = "1.0"
num_cpus = "1.0"
reqwest = { version = "0.11", default-features = false, features = [ "blocking", "rustls-tls" ] }
